--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,8 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    position: sticky;
+    top: 0;
 }
 
 header ul {
