set root variable blue to theme color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ html {
     --primary-color: #1b1f24;
     --primary-color-hover: #274049;
     --primary-light-color: #22282f;
-    --primary-blue: #12bdff;
+    --primary-theme-color: #12bdff;
     --primary-white: #fff;
     --primary-yellow: #ffba53;
     --primary-yellow-hover: #ff8f8f;
@@ -28,7 +28,7 @@ html {
 }
 
 .blue-span {
-    color: var(--primary-blue);
+    color: var(--primary-theme-color);
 }
 
 .grey-span {
@@ -40,14 +40,14 @@ html {
     font-weight: 900;
     padding: 5px;
     background-color: var(--primary-color);
-    color: var(--primary-blue);
-    border: 2px solid var(--primary-blue);
+    color: var(--primary-theme-color);
+    border: 2px solid var(--primary-theme-color);
     border-radius: 10px;
 
 }
 
 .btn:hover {
-    box-shadow: 2px 2px 10px var(--primary-blue);
+    box-shadow: 2px 2px 10px var(--primary-theme-color);
 }
 
 a {
@@ -65,9 +65,9 @@ img {
 .submit-btn {
     font-weight: 900;
     padding: 10px;
-    background-color: var(--primary-blue);
+    background-color: var(--primary-theme-color);
     color: var(--primary-white);
-    border: 2px solid var(--primary-blue);
+    border: 2px solid var(--primary-theme-color);
     border-radius: 10px;
 }
 
@@ -104,21 +104,21 @@ header ul li a {
 }
 
 header ul li a:hover {
-    color: var(--primary-blue);
+    color: var(--primary-theme-color);
 }
 
 header button {
     font-weight: 900;
     padding: 10px;
     background-color: var(--primary-color);
-    color: var(--primary-blue);
-    border: 2px solid var(--primary-blue);
+    color: var(--primary-theme-color);
+    border: 2px solid var(--primary-theme-color);
     border-radius: 10px;
 }
 
 header button:hover {
     cursor: pointer;
-    background-color: var(--primary-blue);
+    background-color: var(--primary-theme-color);
     color: var(--primary-white);
 }
 
@@ -193,8 +193,8 @@ header button:hover {
     border-radius: 50%;
     height: 400px;
     background-color: var(--primary-light-color);
-    border: 2px solid var(--primary-blue);
-    box-shadow: 2px 2px 30px var(--primary-blue);
+    border: 2px solid var(--primary-theme-color);
+    box-shadow: 2px 2px 30px var(--primary-theme-color);
 
 }
 
@@ -225,7 +225,7 @@ header button:hover {
 }
 
 .about-section li a:hover {
-    color: var(--primary-blue);
+    color: var(--primary-theme-color);
 
 }
 
@@ -280,7 +280,7 @@ header button:hover {
 
 .service-card i {
     padding: 10px;
-    background-color: var(--primary-blue);
+    background-color: var(--primary-theme-color);
     border-radius: 50%;
     margin: 5px;
 }
@@ -337,7 +337,7 @@ footer p a {
 }
 
 footer p a:hover {
-    color: var(--primary-blue);
+    color: var(--primary-theme-color);
 }
 
 /* media queries  */
@@ -356,7 +356,7 @@ footer p a:hover {
         justify-content: start;
         padding: 20px;
         transition: right 0.3s ease;
-        box-shadow: 2px 5px 15px var(--primary-blue);
+        box-shadow: 2px 5px 15px var(--primary-theme-color);
     }
 
     header ul {
