modified footer padding

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,6 +355,7 @@ textarea {
 footer {
     background-color: var(--primary-color);
     text-align: center;
+    padding: 20px 0;
 }
 
 footer p {
