--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ html {
 .btn {
     margin-top: 7px;
     font-weight: 900;
-    padding: 5px;
+    padding: 5px 10px;
     background-color: var(--primary-color);
     color: var(--primary-theme-color);
     border: 2px solid var(--primary-theme-color);
@@ -272,7 +272,7 @@ header button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px;
+    padding: 100px 30px;
 }
 
 .service-cards-container {
